chore: [PIDM-1847] Code smells